--- a/about/index.html
+++ b/about/index.html
@@ -188,21 +188,21 @@
             Portfolio <i class="icofont-rounded-down"></i>
           </a>
           <div class="dropdown-menu" aria-labelledby="portfolioDropdown">
-            <a class="dropdown-item" href="/portfolio/index.html">Wedding</a>
-            <a class="dropdown-item" href="/portfolio/index.html">Corporate</a>
-            <a class="dropdown-item" href="/portfolio/index.html">Led Screen Graphics</a>
-            <a class="dropdown-item" href="/portfolio/index.html">Beauty Pageants</a>
-            <a class="dropdown-item" href="/portfolio/index.html">Music Events</a>
+            <a class="dropdown-item" href="/98eight/portfolio/index.html">Wedding</a>
+            <a class="dropdown-item" href="/98eight/portfolio/index.html">Corporate</a>
+            <a class="dropdown-item" href="/98eight/portfolio/index.html">Led Screen Graphics</a>
+            <a class="dropdown-item" href="/98eight/portfolio/index.html">Beauty Pageants</a>
+            <a class="dropdown-item" href="/98eight/portfolio/index.html">Music Events</a>
           </div>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/services/index.html">Services</a>
+          <a class="nav-link" href="/98eight/services/index.html">Services</a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" href="/about/index.html">About</a>
+          <a class="nav-link" href="/98eight/about/index.html">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/contact/index.html">Contact</a>
+          <a class="nav-link" href="/98eight/contact/index.html">Contact</a>
         </li>
       </ul>
     </div>
