--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -50,20 +50,18 @@
         <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="98eight/index.html">Home</a>
+                    <a class="nav-link" href="/98eight/index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="98eight/services/index.html">Services</a>
+                    <a class="nav-link" href="/98eight/services/index.html">Services</a>
                 </li>
                 <li  class="active" class="nav-item">
-                    <a class="nav-link" href="98eight/portfolio/index.html">Portfolio</a>
+                    <a class="nav-link" href="/98eight/portfolio/index.html">Portfolio</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="98eight/about/index.html">About</a>
+                    <a class="nav-link" href="/98eight/about/index.html">About</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="98eight/contact/index.html">Contact</a>
-                </li>
+                
             </ul>
         </div>
     </div>
