--- a/about/index.html
+++ b/about/index.html
@@ -173,7 +173,7 @@
   <!-- Navigation Bar -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand" href="/index.html">
-      <img src="/public/98Eight.webp" alt="Your Logo" class="logo-img">
+      <img src="/98eight/public/98Eight.webp" alt="Your Logo" class="logo-img">
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
