--- a/index.html
+++ b/index.html
@@ -193,10 +193,7 @@ header {
     }
 }
 
-@media (max-width: 576px) {
-    .header-text {
-        top: 100px;
-    }
+
 
     .header-text h2 {
         font-size: 1.2em;
@@ -206,7 +203,7 @@ header {
         padding: 6px 12px;
         font-size: 12px;
     }
-}
+
 
 
 </style>
@@ -356,7 +353,8 @@ typeWriter(text, 0);
 	</style>
 	
 </header>
-  
+ <br>
+ <br>
 <!-- Slideshow container -->
 <div class="slideshow-container">
     <div class="mySlides fade">
@@ -433,38 +431,58 @@ typeWriter(text, 0);
 
 <!--about start -->
 <div class="home-features">
-    <div class="home-features-container featuresContainer">
-        <div class="home-features1">
-            <div class="home-container2">
-                <span class="home-features-sub-heading bodyLarge">
-                    <span>
-                        <span>
-                            <br>
-                            <span class="typewriter">Unlock the power of visual storytelling with 98Eight</span>
-                            <span></span>
-                        </span>
-                        <span>
-                            <span></span>
-                            <span></span>
-                        </span>
-                    </span>
-                    <span>
-                        <span>
-                            <span></span>
-                            <span></span>
-                        </span>
-                        <span>
-                            <span></span>
-                            <span></span>
-                        </span>
-                    </span>
-                </span>
-            </div>
-        </div>
-	</div>
+  <div class="home-features-container featuresContainer">
+      <div class="home-features1">
+          <div class="home-container2">
+              <span class="home-features-sub-heading bodyLarge">
+                  <span>
+                      <span>
+                          <br>
+                          <span class="typewriter">Unlock the power of visual storytelling with 98Eight</span>
+                          <span></span>
+                      </span>
+                      <span>
+                          <span></span>
+                          <span></span>
+                      </span>
+                  </span>
+                  <span>
+                      <span>
+                          <span></span>
+                          <span></span>
+                      </span>
+                      <span>
+                          <span></span>
+                          <span></span>
+                      </span>
+                  </span>
+              </span>
+          </div>
+      </div>
+  </div>
 </div>
 
-			
+<style>
+.home-features-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%; /* Adjust height as needed */
+  text-align: center; /* Center text horizontally */
+}
+
+.home-features1 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%; /* Adjust width as needed */
+}
+
+.home-container2 {
+  text-align: center; /* Center text horizontally */
+}
+</style>
+
 			
 				<div class="ag-format-container">
 					<div class="ag-courses_box">
