--- a/index.html
+++ b/index.html
@@ -801,51 +801,51 @@ typeWriter(text, 0);
 						<div class="isotope">
 							<div class="row">
 
-								<div class="col-sm-4">
-									<div class="item">
-										<img src="https://scontent.fjnb5-1.fna.fbcdn.net/v/t39.30808-6/447253331_3674299416152318_6133907140794480858_n.jpg?_nc_cat=105&ccb=1-7&_nc_sid=833d8c&_nc_eui2=AeEVmJuPVg0QDVtlHBipVURDC09UVF0SUJwLT1RUXRJQnMRoyYUYRgfGjXDbSyVIK6uFXf17Rb88q-tr9EKvgE45&_nc_ohc=00WQJUrzaxsQ7kNvgEuT036&_nc_zt=23&_nc_ht=scontent.fjnb5-1.fna&oh=00_AYBDRfq6aXKNAAyMpFuhPyg1GpDTVZoixLQM_0-cbYXyUQ&oe=66838488" alt="portfolio image"/>
-										<div class="isotope-overlay">
-											<a href="#">
-												Design by 98eight
-											</a>
-										</div><!-- /.isotope-overlay -->
-									</div><!-- /.item -->
-									<div class="item">
-										<img src="https://scontent.fjnb5-1.fna.fbcdn.net/v/t39.30808-6/411975445_3559617620953832_6770071883128520708_n.jpg?_nc_cat=111&ccb=1-7&_nc_sid=833d8c&_nc_eui2=AeE61KhdQ-7EUivixp34xSmXn7S5z29TTsuftLnPb1NOyw6p8Mc5cnlMPxV0_PCNBU5TwR8dzaOEv_twQpAltMV3&_nc_ohc=15nMolc85icQ7kNvgEtH8aL&_nc_zt=23&_nc_ht=scontent.fjnb5-1.fna&oh=00_AYDLl1GLVVtTEpHvmIgcCmIOGqBuu5ZOOF91h5kJZKz3aQ&oe=6683A737" alt="portfolio image"/>
-										<div class="isotope-overlay">
-											<a href="#">
-												Photography by 98eight
-											</a>
-										</div><!-- /.isotope-overlay -->
-									</div><!-- /.item -->
-								</div><!-- /.col -->
-
-								<div class="col-sm-4">
-									<div class="item">
-										<img src="https://scontent.fjnb5-1.fna.fbcdn.net/v/t39.30808-6/410273462_3553421108240150_7559312697032249190_n.jpg?_nc_cat=108&ccb=1-7&_nc_sid=833d8c&_nc_eui2=AeG-lKBCpHveL-zEjuEpeT9BkLNdPPPTXK2Qs10889NcrdLJjUXFuchMATDPtIcWjc1l230_KiIH1UOQIKDRVfmZ&_nc_ohc=QhN2o7_DSkkQ7kNvgEMBouw&_nc_zt=23&_nc_ht=scontent.fjnb5-1.fna&oh=00_AYDLI2vMAPPQR6ZAxJixp5eNrcSKZ_2VOxdImyPY2-udsw&oe=66838BE2" alt="portfolio image"/>
-										<div class="isotope-overlay">
-											<a href="#">
-												Photography by 98eight
-											</a>
-										</div><!-- /.isotope-overlay -->
-									</div><!-- /.item -->
-								</div><!-- /.col -->
-
-								<div class="col-sm-4">
-									<div class="item">
-										<img src="https://scontent.fjnb5-1.fna.fbcdn.net/v/t39.30808-6/380331835_3507051456210449_5256251037764480690_n.jpg?_nc_cat=104&ccb=1-7&_nc_sid=833d8c&_nc_eui2=AeEBxcr-6CBOe-I9LcnR3IZLrNtfB5rJ2Nqs218HmsnY2u531R7SZkJaXY7-wsMOURf5kFPcJY-7kaFPO4msNkPb&_nc_ohc=pBdLXeo6n5wQ7kNvgFlnmfP&_nc_zt=23&_nc_ht=scontent.fjnb5-1.fna&oh=00_AYB0NByE0FqOixAHjqRCdp8z0n_bDE6-wH9_MxplvGBpTg&oe=6683899D" alt="portfolio image"/>
-										<div class="isotope-overlay">
-											<a href="#">
-												Photography by 98eight
-											</a>
-										</div><!-- /.isotope-overlay -->
-									</div><!-- /.item -->
-									<div class="item">
-										<img src="https://scontent.fjnb5-1.fna.fbcdn.net/v/t39.30808-6/367036841_3478893255692936_386009257452414050_n.jpg?stp=cp6_dst-jpg&_nc_cat=101&ccb=1-7&_nc_sid=833d8c&_nc_eui2=AeE5zEGttWdoqJ-jObtentfq9BjXxYPPFzL0GNfFg88XMsMoxwSLX8izsKk5rkzhvtjEjtuuqsohkadygJBpR-t3&_nc_ohc=FTgrF2ERE78Q7kNvgHDoIB7&_nc_zt=23&_nc_ht=scontent.fjnb5-1.fna&oh=00_AYCYKHr5psaBONRmO7gA8EOVU2V5dJiAOe2UU7E-eJYrRA&oe=6683B1D7" alt="portfolio image"/>
-										<div class="isotope-overlay">
-											<a href="#">
-												Photography by 98eight
-											</a>
+                <div class="col-sm-4">
+                  <div class="item">
+                      <img src="brenda.jpg" alt="portfolio image"/>
+                      <div class="isotope-overlay">
+                          <a href="#">
+                              Photography by 98eight
+                          </a>
+                      </div><!-- /.isotope-overlay -->
+                  </div><!-- /.item -->
+                  <div class="item">
+                      <img src="mc.jpg" alt="portfolio image"/>
+                      <div class="isotope-overlay">
+                          <a href="#">
+                              Photography by 98eight
+                          </a>
+                      </div><!-- /.isotope-overlay -->
+                  </div><!-- /.item -->
+              </div><!-- /.col -->
+              
+              <div class="col-sm-4">
+                  <div class="item">
+                      <img src="sax.jpg" alt="portfolio image"/>
+                      <div class="isotope-overlay">
+                          <a href="#">
+                              Photography by 98eight
+                          </a>
+                      </div><!-- /.isotope-overlay -->
+                  </div><!-- /.item -->
+              </div><!-- /.col -->
+              
+              <div class="col-sm-4">
+                  <div class="item">
+                      <img src="murda.jpg" alt="portfolio image"/>
+                      <div class="isotope-overlay">
+                          <a href="#">
+                              Photography by 98eight
+                          </a>
+                      </div><!-- /.isotope-overlay -->
+                  </div><!-- /.item -->
+                  <div class="item">
+                      <img src="wineclub.jpg" alt="portfolio image"/>
+                      <div class="isotope-overlay">
+                          <a href="#">
+                              Design by 98eight
+                          </a>
 										</div><!-- /.isotope-overlay -->
 									</div><!-- /.item -->
 								</div><!-- /.col -->
