--- a/contact/index.html
+++ b/contact/index.html
@@ -194,7 +194,7 @@
             </div>
           </form>
           <div class="contact-details mt-4">
-            <p><i class="fas fa-phone-alt"></i> <strong>Phone:</strong> 076 102 6343</p>
+            <p><i class="fas fa-phone-alt"></i> <strong>Phone:</strong> +27 65 899 4400</p>
             <p><i class="fas fa-map-marker-alt"></i> <strong>Location:</strong> Johannesburg, South Africa</p>
           </div>
         </div>
